Added point system and point sfx

--- a/Fishing Game/Fishing Game.vcxproj.filters
+++ b/Fishing Game/Fishing Game.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\PokemonClone\Pokemon Clone\audio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="interface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\PokemonClone\Pokemon Clone\audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
